--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!!</title>
 </head>
 <body>
-<h1>Hello Coursera!!</h1>
+<h1>Hello Coursera!! It's a great course where I'm striving to learn.</h1>
 </body>
 </html>
